# InfraZero

./: PHASE1_FUNCTIONAL_REQUIREMENTS.md  PROJECT_DESCRIPTION.md  text_model.py
backend/: .env.example  .eslintrc.js  .gitignore  api_contract.md  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  index.ts
frontend/: .gitignore  README.md  fetch_bg.js  index.html  package-lock.json  package.json  wekraft.html
frontend/scripts/: generateIcons.js  reorganize_icons.ps1  resolve_icon_map.ps1
ml-pipeline/: .env.example  .gitignore  README.md  package.json
ml-pipeline/collect/: advanced_topologies.js  generate_dataset.js  topologies.js
ml-pipeline/ghosttrace/: README.md  evaluate_model.py  evaluate_recall.py  graph_encoder.py  inference_server.py  requirements.txt  test_types.py  trace_synthesizer.py  training_history.json
ml-pipeline/scraper/: augment_graphs.py  label_graphs.py  parse_benchmarks.py  parse_excalidraw.py  (+2 more)
simulation-engine/: .gitignore  Cargo.toml
simulation-engine/.cargo/: config.toml
simulation-engine/benches/: engine_bench.rs
simulation-engine/pkg/: simulation_engine.d.ts  simulation_engine.js  simulation_engine_bg.wasm
simulation-engine/src/: lib.rs
simulation-engine/src/analyzer/: cost.rs  grader.rs  mod.rs  root_cause.rs
simulation-engine/src/graph/: edge.rs  graph.rs  mod.rs  node.rs  validator.rs
simulation-engine/src/models/: input.rs  mod.rs  output.rs
simulation-engine/src/physics/: chaos.rs  engine.rs  mod.rs  network.rs  traffic.rs
simulation-engine/src/utils/: hasher.rs  logger.rs  mod.rs  rng.rs
(+69 files in other folders)
